Basic Auth with JWT and Data transfer